--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-fastdtw==0.3.4
-mediapipe>=0.10.20
-numpy
-opencv-contrib-python==4.5.4.60
+streamlit>=1.28.0
 opencv-python-headless>=4.8.0
-pandas==1.3.2
-pytube==11.0.1
-tdqm==0.0.1
-streamlit
+mediapipe>=0.10.20
+numpy>=1.24.0
+pandas>=2.0.0
+Pillow>=10.0.0
+fastdtw==0.3.2
+
 
