--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 fastdtw==0.3.4
-mediapipe>=0.10.20
-numpy
-opencv-contrib-python==4.5.4.60
-opencv-python-headless>=4.8.0
+mediapipe==0.10.5
+numpy==1.24.3
+opencv-python-headless==4.8.0
 pandas==1.3.2
 pytube==11.0.1
-tdqm==0.0.1
-streamlit
-
+streamlit==1.28.1
+tqdm==4.66.1
