--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit>=1.33.0
-streamlit-webrtc>=0.47.7
-opencv-python-headless>=4.9.0.80
-mediapipe>=0.10.14
-numpy>=1.26.0
-pandas>=2.2.0
+streamlit>=1.33.0,<2
+streamlit-webrtc>=0.47.7,<1
+mediapipe==0.10.14
+opencv-python-headless==4.10.0.84
+numpy==1.26.4
+pandas>=2.2.0,<3
 fastdtw>=0.3.4
-av>=12.0.0
+av>=12.0.0,<14
 protobuf>=4.25.3,<5
